*SVN*

* Recognize and raise an exception on 405 Method Not Allowed responses.  #7692 [Josh Peek]

* Handle string and symbol param keys when splitting params into prefix params and query params.

    Comment.find(:all, :params => { :article_id => 5, :page => 2 }) or Comment.find(:all, :params => { 'article_id' => 5, :page => 2 })

* Added find-one with symbol [DHH]. Example: Person.find(:one, :from => :leader) # => GET /people/leader.xml

* BACKWARDS INCOMPATIBLE: Changed the finder API to be more extensible with :params and more strict usage of scopes [DHH]. Changes:

    Person.find(:all, :title => "CEO")      ...becomes: Person.find(:all, :params => { :title => "CEO" })
    Person.find(:managers)                  ...becomes: Person.find(:all, :from => :managers)
    Person.find("/companies/1/manager.xml") ...becomes: Person.find(:one, :from => "/companies/1/manager.xml")

* Add support for setting custom headers per Active Resource model [Rick]

  class Project
    headers['X-Token'] = 'foo'
  end
  
  # makes the GET request with the custom X-Token header
  Project.find(:all)

* Added find-by-path options to ActiveResource::Base.find [DHH]. Examples:

    employees = Person.find(:all, :from => "/companies/1/people.xml") # => GET /companies/1/people.xml
    manager   = Person.find("/companies/1/manager.xml")               # => GET /companies/1/manager.xml


* Added support for using classes from within a single nested module [DHH]. Example:

    module Highrise
      class Note < ActiveResource::Base
        self.site = "http://37s.sunrise.i:3000"
      end

      class Comment < ActiveResource::Base
        self.site = "http://37s.sunrise.i:3000"
      end
    end

  assert_kind_of Highrise::Comment, Note.find(1).comments.first
    

* Added load_attributes_from_response as a way of loading attributes from other responses than just create [DHH]

    class Highrise::Task < ActiveResource::Base
      def complete